Added Open and Save File functionalities
Still need to make a Copy, Cut, and Paste functionalities

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MarciPad"
         mc:Ignorable="d"
+ 
         Title="MarciPad" Height="450" Width="795.473"
         Loaded="Window_Loaded">
     <Window.CommandBindings>
@@ -12,9 +13,8 @@
         <CommandBinding Command="Open" Executed="OpenCommand_Executed"></CommandBinding>
     </Window.CommandBindings>
 
-    <ScrollViewer>
     <Grid>
-        <Menu>
+        <Menu Height="20" Panel.ZIndex="2" HorizontalAlignment="Left" VerticalAlignment="Top" Width="787">
             <MenuItem Header="_File">
                 <MenuItem x:Name="_Open" Header="_Open"  Command="Open"/>
                 <MenuItem x:Name="_Save" Header="_Save" Command="Save"/>
@@ -26,11 +26,13 @@
                 <MenuItem x:Name="_Find" Header="Find"  />
                 <MenuItem x:Name="_Replace" Header="Replace" />
             </MenuItem>
-                <MenuItem Header="View">
-                    <MenuItem Header="Change Theme"></MenuItem>
-                </MenuItem>
+            <MenuItem Header="View">
+                <MenuItem Header="Change Theme"></MenuItem>
+            </MenuItem>
         </Menu>
-        <TextBox Name ="textBox" Margin="2,20,0,0" AcceptsReturn="True" AcceptsTab="True" TextWrapping="Wrap"></TextBox>
+        <ScrollViewer Width="785" Margin="1,20,1,5" Panel.ZIndex="-1">      
+            <TextBox Name ="textBox" AcceptsReturn="True" AcceptsTab="True" TextWrapping="Wrap" Height="404" Width="785"/>
+        </ScrollViewer>
     </Grid>
-    </ScrollViewer>
+
 </Window>
