--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,9 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MarciPad"
         mc:Ignorable="d"
- 
         Title="MarciPad" Height="450" Width="795.473"
-        Loaded="Window_Loaded">
+        Loaded="Window_Loaded"
+        Icon="16de5f8dd1ffe99f9e169a0605a960b3.ico">
     <Window.CommandBindings>
         <CommandBinding Command="Save" Executed="SaveCommand_Executed"></CommandBinding>
         <CommandBinding Command="Open" Executed="OpenCommand_Executed"></CommandBinding>
@@ -18,6 +18,7 @@
             <MenuItem Header="_File">
                 <MenuItem x:Name="_Open" Header="_Open"  Command="Open"/>
                 <MenuItem x:Name="_Save" Header="_Save" Command="Save"/>
+                <MenuItem x:Name="_Close" Header="_Close" Click="CloseCurrentDocument"/>
             </MenuItem>
             <MenuItem Header="Edit">
                 <MenuItem x:Name="_Copy" Header="Copy"  />
@@ -30,8 +31,8 @@
                 <MenuItem Header="Change Theme"></MenuItem>
             </MenuItem>
         </Menu>
-        <ScrollViewer Width="785" Margin="1,20,1,5" Panel.ZIndex="-1">      
-            <TextBox Name ="textBox" AcceptsReturn="True" AcceptsTab="True" TextWrapping="Wrap" Height="404" Width="785"/>
+        <ScrollViewer VerticalAlignment="Stretch" HorizontalAlignment="Stretch" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Panel.ZIndex="-1">      
+            <TextBox Name ="textBox" AcceptsReturn="True"  AcceptsTab="True" TextWrapping="Wrap" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
         </ScrollViewer>
     </Grid>
 
