--- a/MarciPad/MainWindow.xaml
+++ b/MarciPad/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="MarciPad.MainWindow"
+﻿<Window x:Name="mainWindow" x:Class="MarciPad.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -9,7 +9,7 @@
         Loaded="Window_Loaded"
         Icon="16de5f8dd1ffe99f9e169a0605a960b3.ico"
         MinHeight="300"
-        MinWidth="480">
+        MinWidth="480" WindowStyle="ThreeDBorderWindow" WindowStartupLocation="CenterScreen">
     <Window.CommandBindings>
         <CommandBinding Command="Save" Executed="SaveCommand_Executed"></CommandBinding>
         <CommandBinding Command="Open" Executed="OpenCommand_Executed"></CommandBinding>
@@ -17,13 +17,13 @@
         <CommandBinding Command="Copy" Executed="Copy_Executed"></CommandBinding>
         <CommandBinding Command="Paste" Executed="Paste_Executed"></CommandBinding>
     </Window.CommandBindings>
-
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Menu Grid.Row="0" Height="20" Panel.ZIndex="1" HorizontalAlignment="Stretch" VerticalAlignment="Top">
+        <Menu x:Name="menuBar" Grid.Row="0" Height="20" Panel.ZIndex="1" HorizontalAlignment="Stretch" VerticalAlignment="Top">
             <MenuItem Header="_File">
                 <MenuItem x:Name="_Open" Header="_Open"  Command="Open"/>
                 <MenuItem x:Name="_Save" Header="_Save" Command="Save"/>
@@ -36,13 +36,21 @@
                 <MenuItem x:Name="_Find" Header="Find"  />
                 <MenuItem x:Name="_Replace" Header="Replace" />
             </MenuItem>
-            <MenuItem Header="View">
-                <MenuItem Header="Change Theme"></MenuItem>
+            <MenuItem Header="Theme">
+                <MenuItem Header="Light" Click="Light_Click" Tag="DefaultTheme.xaml"></MenuItem>
+                <MenuItem Header="Dark" Click="Darken_Click" Tag="DarkTheme.xaml"></MenuItem>
             </MenuItem>
         </Menu>
             
         <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" >
-            <TextBox Name ="textBox" AcceptsReturn="True"  AcceptsTab="True" TextWrapping="Wrap" Height="Auto"/>
+            <TextBox Name ="textBox" AcceptsReturn="True"  AcceptsTab="True" TextWrapping="Wrap" Height="Auto">
+                <TextBox.Background>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="Gainsboro" Offset="1"/>
+                        <GradientStop Color="White"/>
+                    </LinearGradientBrush>
+                </TextBox.Background>
+            </TextBox>
         </ScrollViewer>
     </Grid>
 </Window>
